[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://RobotoMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 129, 173, 16, 19 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 368, 368, 16, 16 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -43.0
margin_right = 147.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 180.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "CODENAME: TABLETOP"

[node name="HostGame" type="Button" parent="MainMenu"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 46.0
text = "Host Game"
align = 0

[node name="JoinGame" type="Button" parent="MainMenu"]
margin_top = 50.0
margin_right = 180.0
margin_bottom = 70.0
text = "Join Game"
align = 0

[node name="Settings" type="Button" parent="MainMenu"]
margin_top = 74.0
margin_right = 180.0
margin_bottom = 94.0
text = "Settings"
align = 0

[node name="Quit" type="Button" parent="MainMenu"]
margin_top = 98.0
margin_right = 180.0
margin_bottom = 118.0
text = "Quit"
align = 0

[node name="Settings" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -56.0
margin_right = 160.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/GridContainer"]
margin_top = 5.0
margin_right = 154.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Username"

[node name="LineEdit" type="LineEdit" parent="Settings/GridContainer"]
margin_left = 158.0
margin_right = 312.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "SuperCoolUsername"

[node name="Lobby" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -80.0
margin_right = 176.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby/HSplitContainer"]
margin_right = 178.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameSettings" type="RichTextLabel" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_right = 178.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Max Game Masters : 2
Player Speed Multiplier : 1x"

[node name="SkinLabel" type="Label" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 178.0
margin_bottom = 83.0
text = "Skin"

[node name="SkinOptions" type="OptionButton" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 178.0
margin_bottom = 112.0
text = "Warrior"
icon = SubResource( 2 )
align = 1
items = [ "Warrior", SubResource( 2 ), false, 0, null, "GameMaster", SubResource( 3 ), false, 1, null ]
selected = 0

[node name="Invite" type="Button" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 178.0
margin_bottom = 136.0
text = "Invite"

[node name="Leave" type="Button" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 178.0
margin_bottom = 160.0
text = "Leave"

[node name="Start" type="Button" parent="Lobby/HSplitContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 178.0
margin_bottom = 184.0
text = "Start"

[node name="VBoxContainer2" type="VBoxContainer" parent="Lobby/HSplitContainer"]
margin_left = 190.0
margin_right = 368.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Lobby/HSplitContainer/VBoxContainer2"]
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Players"
align = 1

[node name="PlayerList" type="ItemList" parent="Lobby/HSplitContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Player 1 | Game Master", SubResource( 2 ), false, "Player 2 | Warrior", SubResource( 2 ), false, "Player 3 | Warrior", SubResource( 2 ), false, "Player 4 | Warrior", SubResource( 2 ), false, "Player 5 | Warrior", SubResource( 2 ), false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertInvite" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -29.0
margin_right = 78.0
margin_bottom = 29.0
window_title = "Copied"
dialog_text = "IP copied to clipboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -40.0
margin_right = 84.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIp" type="Label" parent="JoinPopup/VBoxContainer"]
margin_right = 168.0
margin_bottom = 14.0
text = "IP"

[node name="IpInput" type="LineEdit" parent="JoinPopup/VBoxContainer"]
margin_top = 18.0
margin_right = 168.0
margin_bottom = 42.0

[node name="Join" type="Button" parent="JoinPopup/VBoxContainer"]
margin_top = 46.0
margin_right = 168.0
margin_bottom = 66.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/HostGame" to="." method="_on_HostGame_pressed"]
[connection signal="pressed" from="MainMenu/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Lobby/HSplitContainer/VBoxContainer/Invite" to="." method="_on_Invite_pressed"]
[connection signal="pressed" from="Lobby/HSplitContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="JoinPopup/VBoxContainer/Join" to="." method="_on_Join_pressed"]
